# demos-cfd-app

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: streamlit_app.py
scripts/: generate_dataset.py
src/demos_cfd_app/: __init__.py  dataset.py  synthetic_model.py
