
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demos-cfd-app"
version = "0.1.0"
description = "Streamlit app to generate synthetic CFD-like datasets."
authors = [{name="Daniel Greenhouse", email="dan.greenhouse@digilab.ai"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.37",
  "numpy>=1.24",
  "pandas>=2.0",
  "altair>=5.0",
  "plotly>=5.22",
]

[project.urls]
Homepage = "https://example.com"
